PAAS-318: import my.cnf from paas_jelastic_dx_universal repo add Orchrestrator pre and post failover scripts

--- a/configs/master.cnf
+++ b/configs/master.cnf
@@ -1,5 +1,6 @@
 [mysqld]
 server-id = 1
+report-host=nodeXXX
 log-bin = mysql-bin
 log-slave-updates
 replicate-wild-ignore-table = performance_schema.%
