PAAS-318: add single slave in ProxySQL and forbid a node to be writer and reader at the same time

--- a/configs/proxysql.cnf
+++ b/configs/proxysql.cnf
@@ -25,4 +25,5 @@ mysql_variables=
     commands_stats=true
     sessions_sort=true
     max_allowed_packet=1073741824
+    monitor_writer_is_also_reader=false
 }
